kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 4499
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4499
  type: NodePort
